add privacy/terms/app-ads.txt for store cupang_7

--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@ textarea.summary-box{
 
 <script>
 /* ===== 설정 ===== */
-const API_BASE = '';                 // 서버 넣으면 실제 요약, 비우면 Mock 동작
+const API_BASE = 'https://tinytext-web.vercel.app';                 // 서버 넣으면 실제 요약, 비우면 Mock 동작
 const USE_MOCK = !API_BASE;
 const PARTNER_ID = 'AF2974050';      // 쿠팡 파트너스
 const SUB_ID     = 'bigeyes';        // 추적 구분자(원하면 변경)
