--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,34 @@ textarea.summary-box{
 .hidden{display:none}
 .small{font-size:13px;color:var(--muted)}
 .section-title{margin:0 0 6px}
+
+/* 로딩 오버레이 */
+#loadingOverlay{
+  position:fixed; inset:0; display:none; place-items:center;
+  background:rgba(6,10,25,.58); backdrop-filter: blur(6px); z-index:99;
+}
+#loadingOverlay.show{display:grid}
+.loader{
+  display:inline-flex; align-items:center; gap:10px;
+  background:#121833; border:1px solid #223066; color:#e8ecff;
+  padding:12px 18px; border-radius:12px; font-weight:700;
+}
+.loader-dot{width:8px;height:8px;border-radius:50%;background:#7aa2ff;animation:bounce .9s infinite ease-in-out}
+.loader-dot:nth-child(2){animation-delay:.15s}
+.loader-dot:nth-child(3){animation-delay:.3s}
+@keyframes bounce{0%,80%,100%{transform:scale(0.8);opacity:.6}40%{transform:scale(1);opacity:1}}
 </style>
 </head>
 <body>
 <header><h1>👀 BigEyes · 사진 요약 + 쿠팡 최저가</h1></header>
+
+<!-- 로딩 오버레이 -->
+<div id="loadingOverlay" aria-live="polite" aria-busy="true">
+  <div class="loader">
+    <span class="loader-dot"></span><span class="loader-dot"></span><span class="loader-dot"></span>
+    <span>처리 중입니다... 잠시만요</span>
+  </div>
+</div>
 
 <main>
   <!-- 인트로 -->
@@ -141,6 +165,12 @@ const sumReadOnly=$('sumReadOnly'), btnBackSum=$('btnBackSum');
 const sumBox=$('sumBox'), btnEditSum=$('btnEditSum'), kwFinal=$('kwFinal');
 const btnBack2=$('btnBack2'), btnGoCoupang=$('btnGoCoupang');
 const btnReward=$('btnReward');
+const loadingOverlay=$('loadingOverlay');
+
+/* ===== 로딩 토글 ===== */
+function showLoading(on=true){
+  loadingOverlay.classList[on? 'add':'remove']('show');
+}
 
 /* ===== 크레딧 ===== */
 function clamp(n,lo,hi){return Math.max(lo,Math.min(hi,n))}
@@ -243,7 +273,7 @@ async function ensureOCR(){
     };
     return lastOCR;
   }else{
-    const base64=await toBase64(lastImageBlob);
+    const base64=await toBase64(lastImageBlob); // 리사이즈/압축 적용
     const r=await fetch(`${API_BASE}/api/summarize`,{
       method:'POST',headers:{'Content-Type':'application/json'},
       body:JSON.stringify({imageBase64:base64,lang:'ko'})
@@ -261,15 +291,20 @@ async function ensureOCR(){
   }
 }
 
-/* ===== ① 작은 글씨 요약(보고서 화면으로) ===== */
+/* ===== ① 작은 글씨 요약 → 보고서 화면 ===== */
 btnAnalyze.addEventListener('click', async ()=>{
+  showLoading(true);
   try{
     const payload=await ensureOCR();
     sumReadOnly.value=buildReport(payload);
     stepUpload.classList.add('hidden'); 
     stepSummary.classList.remove('hidden'); 
     window.scrollTo({top:0,behavior:'smooth'});
-  }catch(e){ alert(e.message||'오류가 발생했습니다.'); }
+  }catch(e){ 
+    alert(e.message||'오류가 발생했습니다.'); 
+  }finally{
+    showLoading(false);
+  }
 });
 btnBackSum.addEventListener('click', ()=>{
   stepSummary.classList.add('hidden'); 
@@ -278,6 +313,7 @@ btnBackSum.addEventListener('click', ()=>{
 
 /* ===== ② 쿠팡 플로우: 요약 한 칸 + 검색어 한 줄 ===== */
 btnCoupangFlow.addEventListener('click', async ()=>{
+  showLoading(true);
   try{
     const payload=await ensureOCR();
     const baseSummary=(payload.coreSummary||'').trim();
@@ -287,7 +323,11 @@ btnCoupangFlow.addEventListener('click', async ()=>{
     $('sumBox').readOnly=true; btnEditSum.textContent='✏️ 수정';
     kwFinal.value=buildSearchKeyword(p,'');
     stepUpload.classList.add('hidden'); stepCoupang.classList.remove('hidden'); window.scrollTo({top:0,behavior:'smooth'});
-  }catch(e){ alert(e.message||'오류가 발생했습니다.'); }
+  }catch(e){ 
+    alert(e.message||'오류가 발생했습니다.'); 
+  }finally{
+    showLoading(false);
+  }
 });
 
 let isEditingSummary=false;
