--- a/public/index.html
+++ b/public/index.html
@@ -211,24 +211,101 @@ function buildSearchKeyword(product={}, fallback=''){
   let q=parts.join(' ').replace(/\s+/g,' ').trim(); if(!q) q=(fallback||'').trim(); if(q.length>80) q=q.slice(0,80); return q;
 }
 
-/* ===== 파일 선택 ===== */
-async function onPick(file){
-  if(!file) return;
-  if(loadCredits()<=0){ alert('잔여 건수가 없습니다. 광고 시청으로 충전해주세요.'); return; }
-  lastImageBlob=file; imgPrev.src=URL.createObjectURL(file); imgPrev.classList.remove('hidden');
-  btnAnalyze.classList.remove('hidden'); btnCoupangFlow.classList.remove('hidden');
-  ocrDoneForThisImage=false; lastOCR=null;
+// --- (추가) 보고용 전체 텍스트 합치기 ---
+function gatherAllText(payload){
+  const parts = [];
+  if (payload.coreSummary) parts.push(payload.coreSummary);
+  if (Array.isArray(payload.categories)){
+    for(const c of payload.categories){
+      if (c.title) parts.push(String(c.title));
+      if (c.summary) parts.push(String(c.summary));
+    }
+  }
+  return parts.join('\n');
 }
-fileCam.addEventListener('change',()=>onPick(fileCam.files?.[0]));
-filePick.addEventListener('change',()=>onPick(filePick.files?.[0]));
+
+// --- (추가) 간단 브랜드 사전(필요시 확장) ---
+const BRAND_LIST = [
+  'Lacoste','Nike','Adidas','Levi\'s','UNIQLO','Zara','H&M','Mango',
+  'The North Face','Patagonia','Columbia','Ralph Lauren','Tommy Hilfiger'
+];
+
+// --- (추가) 텍스트에서 제품코드/색상/사이즈/브랜드 추출 ---
+function extractInfo(textRaw=''){
+  const text = String(textRaw||'').replace(/\n+/g,' ').trim();
+
+  // 1) 제품코드(점/대시 허용) — 예: HTR103.C00037, Cde: 02802
+  let code = '';
+  const codeRegs = [
+    /Cde[:\s]*([A-Z0-9.\-]{3,})/i,
+    /\b([A-Z]{2,}[A-Z0-9.\-]{2,})\b/g,
+    /\b([A-Z0-9]{3,}\.[A-Z0-9.\-]{2,})\b/i
+  ];
+  for(const r of codeRegs){
+    const m = r.exec(text);
+    if(m && m[1]) { code = m[1]; break; }
+  }
+  if(code) code = code.replace(/\.+/g,' ').trim(); // HTR103.C00037 → HTR103 C00037
+
+  // 2) 색상(영/불)
+  const COLOR_WORDS = ['noir','black','blanc','white','gray','grey','navy','blue','bleu',
+    'beige','brown','marron','red','rouge','green','vert','pink','rose','yellow','jaune',
+    'gris','ivory','cream'];
+  let color = '';
+  for(const w of COLOR_WORDS){
+    const m = new RegExp(`\\b${w}\\b`, 'i').exec(text);
+    if(m){ color = m[0]; break; }
+  }
+
+  // 3) 사이즈(보고서에는 표기, 검색어에는 제외)
+  let size = '';
+  const sizeRegs = [
+    /\bT\.?\s*(\d{2})\b/i,          // T. 32
+    /\bsize\s*([A-Za-z0-9\-]+)\b/i, // size 32/size L
+    /\bTaille\s*(\d{2})\b/i
+  ];
+  for(const r of sizeRegs){
+    const m = r.exec(text);
+    if(m && m[1]) { size = m[1]; break; }
+  }
+
+  // 4) 브랜드(텍스트 직매칭)
+  let brand = '';
+  for(const b of BRAND_LIST){
+    const re = new RegExp(`\\b${b.replace(/\s+/g,'\\s+')}`,'i');
+    if(re.test(text)){ brand = b; break; }
+  }
+  return { code, color, size, brand };
+}
+
+// --- (추가) 폴백: 요약 텍스트에서 일반 키워드 추출(한국어/영문 혼용 단순 규칙)
+function extractGenericKeywords(textRaw='', max=4){
+  const text = String(textRaw||'').toLowerCase().replace(/[^\w가-힣\s]/g,' ');
+  const words = text.split(/\s+/).filter(Boolean);
+  const stop = new Set(['the','and','for','with','this','that','size','color','black','white','gray','grey','noir','blanc','bleu','rouge','vert','jaune','of','to','in','on','a','an','mm','cm','inch','인치','사이즈','색상','제품','모델','코드']);
+  const counts = new Map();
+  for(const w of words){
+    if (w.length<2 || stop.has(w)) continue;
+    counts.set(w,(counts.get(w)||0)+1);
+  }
+  return [...counts.entries()].sort((a,b)=>b[1]-a[1]).slice(0,max).map(([w])=>w).join(' ');
+}
 
 /* ===== 보고서 렌더러 ===== */
 function buildReport(payload){
   const lines=[];
   const domain = payload.domain ? `(${payload.domain})` : '';
-  lines.push(`📝 보고서 ${domain}`.trim());
+
+  // ▲ 제품 식별(코드/색상/사이즈/브랜드) — 없으면 '정보 부족/없음'으로 명시
+  const info = extractInfo(gatherAllText(payload));
+  lines.push(`🧾 제품 식별 ${domain}`.trim());
+  lines.push(` - 제품코드: ${info.code || '정보 부족'}`);
+  lines.push(` - 색상: ${info.color || '정보 부족'}`);
+  lines.push(` - 사이즈: ${info.size || '정보 부족'}`);
+  lines.push(` - 브랜드(추정): ${info.brand || '없음'}`);
   lines.push('');
-  // 핵심 요약
+
+  // ▼ 핵심 요약
   const core = (payload.coreSummary||'').trim();
   if(core){
     lines.push('■ 핵심 요약');
@@ -238,7 +315,8 @@ function buildReport(payload){
     }
     lines.push('');
   }
-  // 카테고리
+
+  // ▼ 카테고리 요약
   const cats = Array.isArray(payload.categories)? payload.categories : [];
   for(const c of cats){
     const title = c.title || c.key || '세부정보';
@@ -316,13 +394,31 @@ btnCoupangFlow.addEventListener('click', async ()=>{
   showLoading(true);
   try{
     const payload=await ensureOCR();
+
+    // 요약 패널 채우기
     const baseSummary=(payload.coreSummary||'').trim();
     const p=payload.product||{};
     const infoLine=[p.brand,p.model,p.name,Array.isArray(p.attrs)?p.attrs.slice(0,3).join(', '):''].filter(Boolean).join(' · ');
     $('sumBox').value=[baseSummary, infoLine?`\n\n[제품] ${infoLine}`:''].join('');
     $('sumBox').readOnly=true; btnEditSum.textContent='✏️ 수정';
-    kwFinal.value=buildSearchKeyword(p,'');
-    stepUpload.classList.add('hidden'); stepCoupang.classList.remove('hidden'); window.scrollTo({top:0,behavior:'smooth'});
+
+    // 검색어 생성: (브랜드?) + 코드 + 색상  → 모두 없으면 core/cats에서 일반 키워드 추출
+    let kw = buildSearchKeyword({ brand:p.brand, model:p.model, name:p.name, attrs:[] }, '').trim();
+    if(!kw){
+      const allText = gatherAllText(payload);
+      const info = extractInfo(allText);
+      const parts = [];
+      if (info.brand) parts.push(info.brand);
+      if (info.code)  parts.push(info.code);
+      if (info.color) parts.push(info.color);
+      kw = parts.join(' ').replace(/\s+/g,' ').trim();
+      if(!kw){ kw = extractGenericKeywords(allText, 4); } // 최종 폴백
+    }
+    kwFinal.value = kw;
+
+    stepUpload.classList.add('hidden'); 
+    stepCoupang.classList.remove('hidden'); 
+    window.scrollTo({top:0,behavior:'smooth'});
   }catch(e){ 
     alert(e.message||'오류가 발생했습니다.'); 
   }finally{
