--- a/public/index.html
+++ b/public/index.html
@@ -23,50 +23,26 @@ main{max-width:900px;margin:0 auto;padding:16px;display:grid;gap:14px}
 input[type="file"]{display:none}
 input[type="text"]{width:100%;padding:12px 14px;border-radius:12px;border:1px solid #2a3a7a;background:#0e1430;color:#e8ecff}
 textarea.summary-box{
-  width:100%; min-height:220px; padding:12px 14px;
+  width:100%; min-height:160px; padding:12px 14px;
   border-radius:12px; border:1px solid #2a3a7a;
   background:#0e1430; color:#e8ecff; line-height:1.7; font-size:15px;
-  white-space:pre-wrap; resize:vertical;
+  resize:vertical;
 }
 .preview{width:100%;max-height:380px;object-fit:contain;border-radius:12px;border:1px solid var(--line)}
 .hidden{display:none}
 .small{font-size:13px;color:var(--muted)}
 .section-title{margin:0 0 6px}
-
-/* 로딩 오버레이 */
-#loadingOverlay{
-  position:fixed; inset:0; display:none; place-items:center;
-  background:rgba(6,10,25,.58); backdrop-filter: blur(6px); z-index:9999;
-}
-#loadingOverlay.show{display:grid}
-.loader{
-  display:inline-flex; align-items:center; gap:10px;
-  background:#121833; border:1px solid #223066; color:#e8ecff;
-  padding:12px 18px; border-radius:12px; font-weight:700;
-}
-.loader-dot{width:8px;height:8px;border-radius:50%;background:#7aa2ff;animation:bounce .9s infinite ease-in-out}
-.loader-dot:nth-child(2){animation-delay:.15s}
-.loader-dot:nth-child(3){animation-delay:.3s}
-@keyframes bounce{0%,80%,100%{transform:scale(0.8);opacity:.6}40%{transform:scale(1);opacity:1}}
 </style>
 </head>
 <body>
 <header><h1>👀 BigEyes · 사진 요약 + 쿠팡 최저가</h1></header>
-
-<!-- 로딩 오버레이 -->
-<div id="loadingOverlay" aria-live="polite" aria-busy="true">
-  <div class="loader">
-    <span class="loader-dot"></span><span class="loader-dot"></span><span class="loader-dot"></span>
-    <span>처리 중입니다... 잠시만요</span>
-  </div>
-</div>
 
 <main>
   <!-- 인트로 -->
   <section class="card">
     <div class="lead">
       <strong>사진 속 작은 글씨 요약</strong> + <strong>쿠팡 최저가 바로가기</strong><br/>
-      가입 X, 이용정보 저장 X, 편하게 사용하세요
+      자동 추출된 검색어는 필요하면 <em>수정</em>하세요.
     </div>
     <p style="text-align:center;margin:8px 0 0">
       <span id="creditTop" class="credit">(이용 가능 건수 : 0000건)</span>
@@ -101,15 +77,16 @@ textarea.summary-box{
     <p class="small">※ 같은 사진에 대해 OCR은 한 번만 차감됩니다.</p>
   </section>
 
-  <!-- STEP 2-A: 보고서 형태 요약(읽기 전용) -->
+  <!-- STEP 2-A: 간단 요약 화면(읽기 전용) -->
   <section id="stepSummary" class="card hidden">
-    <h2 class="section-title">2) 요약 결과(보고서)</h2>
+    <h2 class="section-title">2) 요약 결과</h2>
     <textarea id="sumReadOnly" class="summary-box" readonly></textarea>
-    <div class="row" style="grid-template-columns:1fr;align-items:center">
-      <!-- 이 화면에서는 최저가 버튼 숨김 -->
+    <div class="row" style="grid-template-columns:1fr auto;align-items:center">
       <button id="btnBackSum" class="btn secondary">⬅ 이전 화면으로</button>
+      <!-- ✅ 라벨 고정: 쿠팡최저가 가기 -->
+      <button id="btnGoCoupangDirect" class="btn">🛒 쿠팡최저가 가기</button>
     </div>
-    <p class="small">※ 최저가 이동은 다음 화면(검색어 확인 단계)에서 진행할 수 있어요.</p>
+    <p class="small">※ 바로 이동 시, 아래 화면에서 검색어를 수정하지 않고 진행합니다.</p>
   </section>
 
   <!-- STEP 2-B: 쿠팡 키워드 확인/수정 -->
@@ -143,17 +120,17 @@ textarea.summary-box{
 
 <script>
 /* ===== 설정 ===== */
-const API_BASE = window.location.origin;   // 배포 도메인 기준
-const USE_MOCK = false;
-const PARTNER_ID = 'AF2974050';
-const SUB_ID     = 'bigeyes';
+const API_BASE = 'https://tinytext-web.vercel.app'; // 서버 넣으면 실제 요약, 비우면 Mock 동작
+const USE_MOCK = !API_BASE;
+const PARTNER_ID = 'AF2974050';      // 쿠팡 파트너스
+const SUB_ID     = 'bigeyes';        // 추적 구분자(원하면 변경)
 const LS_KEY = 'be_credits_v08';
 const DEFAULT_CREDITS = 3;
 const MAX_CREDITS = 9999;
 
 /* ===== 상태/요소 ===== */
 let lastImageBlob = null;
-let lastOCR = null;
+let lastOCR = null;                  // { coreSummary, (product 무시) }
 let ocrDoneForThisImage = false;
 
 const $ = id => document.getElementById(id);
@@ -161,21 +138,10 @@ const creditTop=$('creditTop'), creditTop2=$('creditTop2');
 const stepUpload=$('stepUpload'), stepSummary=$('stepSummary'), stepCoupang=$('stepCoupang');
 const fileCam=$('fileCam'), filePick=$('filePick'), imgPrev=$('imgPrev');
 const btnAnalyze=$('btnAnalyze'), btnCoupangFlow=$('btnCoupangFlow');
-const sumReadOnly=$('sumReadOnly'), btnBackSum=$('btnBackSum');
+const sumReadOnly=$('sumReadOnly'), btnBackSum=$('btnBackSum'), btnGoCoupangDirect=$('btnGoCoupangDirect');
 const sumBox=$('sumBox'), btnEditSum=$('btnEditSum'), kwFinal=$('kwFinal');
 const btnBack2=$('btnBack2'), btnGoCoupang=$('btnGoCoupang');
 const btnReward=$('btnReward');
-const loadingOverlay=$('loadingOverlay');
-
-/* ===== 로딩 토글(모바일에서도 확실히 보이게) ===== */
-async function showLoading(on=true){
-  if(on){
-    loadingOverlay.classList.add('show');
-    await new Promise(requestAnimationFrame); // 페인트 1프레임 양보
-  }else{
-    loadingOverlay.classList.remove('show');
-  }
-}
 
 /* ===== 크레딧 ===== */
 function clamp(n,lo,hi){return Math.max(lo,Math.min(hi,n))}
@@ -185,240 +151,137 @@ function saveCredits(n){const v=clamp(n,0,MAX_CREDITS);localStorage.setItem(LS_K
 function renderCredits(v=loadCredits()){
   const txt=`(이용 가능 건수 : ${pad4(v)}건)`;
   creditTop.textContent=txt; creditTop2.textContent=txt;
-
-  // ⚠ 파일 입력 비활성화는 UX 문제를 유발하므로 해제
-  // const blocked=v<=0; fileCam.disabled=blocked; filePick.disabled=blocked;
+  const blocked=v<=0; fileCam.disabled=blocked; filePick.disabled=blocked;
 }
 (function initCredits(){const p=new URLSearchParams(location.search); if(p.has('reset')) localStorage.removeItem(LS_KEY); renderCredits();})();
 
-/* ===== 업로드 유틸 ===== */
-// 전송 전 이미지 리사이즈/압축 (긴 변 1600px, JPEG q=0.8)
-async function toBase64(file, maxSide=1600, quality=0.8){
-  const img = await new Promise(res=>{
-    const i = new Image();
-    i.onload = ()=>res(i);
-    i.src = URL.createObjectURL(file);
-  });
-  const {width, height} = img;
-  const scale = Math.min(1, maxSide / Math.max(width, height));
-  const w = Math.round(width * scale), h = Math.round(height * scale);
-  const canvas = document.createElement('canvas');
-  canvas.width = w; canvas.height = h;
-  const ctx = canvas.getContext('2d');
-  ctx.drawImage(img, 0, 0, w, h);
-  const dataUrl = canvas.toDataURL('image/jpeg', quality);
-  return dataUrl.split(',')[1];
-}
-
+/* ===== 유틸 ===== */
+function toBase64(file){return new Promise(res=>{const r=new FileReader();r.onload=()=>res(r.result.split(',')[1]);r.readAsDataURL(file);});}
 function coupangAppUrl(q){return 'coupang://search?q='+encodeURIComponent(q)}
-function coupangWebUrl(q){const base='https://www.coupang.com/np/search';const params=new URLSearchParams({q,channel:'user',lptag:PARTNER_ID,subId:SUB_ID});return `${base}?${params.toString()}`}
-function buildSearchKeyword(product={}, fallback=''){
-  const parts=[]; if(product.brand)parts.push(product.brand); if(product.model)parts.push(product.model); if(product.name)parts.push(product.name);
-  if(Array.isArray(product.attrs)) parts.push(...product.attrs.slice(0,3));
-  let q=parts.join(' ').replace(/\s+/g,' ').trim(); if(!q) q=(fallback||'').trim(); if(q.length>80) q=q.slice(0,80); return q;
+function coupangWebUrl(q){
+  const base='https://www.coupang.com/np/search';
+  const params=new URLSearchParams({q,channel:'user',lptag:PARTNER_ID,subId:SUB_ID});
+  return `${base}?${params.toString()}`
 }
 
-/* ===== 보고서용 텍스트 합치기/추출 ===== */
-function gatherAllText(payload){
-  const parts = [];
-  if (payload.coreSummary) parts.push(payload.coreSummary);
-  if (Array.isArray(payload.categories)){
-    for(const c of payload.categories){
-      if (c.title) parts.push(String(c.title));
-      if (c.summary) parts.push(String(c.summary));
-    }
+/* ✅ 요약 기반 키워드 생성기: 제품식별 미사용 */
+function buildSearchKeywordFromSummary(coreSummary='') {
+  const lines = (coreSummary || '')
+    .split('\n')
+    .map(s => s.replace(/^-\s*/, '').trim())
+    .filter(Boolean)
+    .slice(0, 3);
+
+  const STOPWORDS = ['주의','경고','확인','사용법','참조','자세히','상세','해당','제품','상품','기본','특징','옵션','선택','권장','주의사항','보관','이상','이하'];
+
+  const cleaned = lines
+    .map(l => l.replace(/[()［\]【】{}<>:;'"“”‘’]/g,' ').replace(/\s{2,}/g,' ').trim())
+    .join(' ');
+
+  let tokens = cleaned.split(/\s+/).map(t => t.trim()).filter(Boolean)
+    .map(t => t.replace(/[^0-9A-Za-z가-힣\-]/g,'')) // 노이즈 제거
+    .filter(t => t.length>=2 && !STOPWORDS.includes(t));
+
+  // 가벼운 가중치 (모델/치수/색상/유형 등)
+  const MODEL_RE=/^[A-Z0-9][A-Z0-9\-]{2,}$/;
+  const SIZE_RE=/^(\d{2,4}[cmCM]|[SMLXL]{1,3}|[2-9]XL)$/;
+  const COLOR_KO=/^(블랙|화이트|아이보리|그레이|네이비|카키|베이지|브라운|레드|블루|그린)$/;
+  const TYPE_KO=/^(반팔|긴팔|폴로|셔츠|바지|점퍼|스니커즈|후드|자켓|원피스|가디건)$/;
+
+  const pri=[], sec=[];
+  for(const t of tokens){
+    if(MODEL_RE.test(t)||SIZE_RE.test(t)||COLOR_KO.test(t)||TYPE_KO.test(t)) pri.push(t);
+    else sec.push(t);
   }
-  return parts.join('\n');
-}
-const BRAND_LIST = ['Lacoste','Nike','Adidas','Levi\'s','UNIQLO','Zara','H&M','Mango','The North Face','Patagonia','Columbia','Ralph Lauren','Tommy Hilfiger'];
-function extractInfo(textRaw=''){
-  const text = String(textRaw||'').replace(/\n+/g,' ').trim();
-  let code = '';
-  const codeRegs = [
-    /Cde[:\s]*([A-Z0-9.\-]{3,})/i,
-    /\b([A-Z]{2,}[A-Z0-9.\-]{2,})\b/g,
-    /\b([A-Z0-9]{3,}\.[A-Z0-9.\-]{2,})\b/i
-  ];
-  for(const r of codeRegs){ const m = r.exec(text); if(m && m[1]){ code=m[1]; break; } }
-  if(code) code = code.replace(/\.+/g,' ').trim();
-
-  const COLOR_WORDS = ['noir','black','blanc','white','gray','grey','navy','blue','bleu','beige','brown','marron','red','rouge','green','vert','pink','rose','yellow','jaune','gris','ivory','cream'];
-  let color = ''; for(const w of COLOR_WORDS){ const m=new RegExp(`\\b${w}\\b`,'i').exec(text); if(m){ color=m[0]; break; } }
-
-  let size=''; const sizeRegs=[/\bT\.?\s*(\d{2})\b/i, /\bsize\s*([A-Za-z0-9\-]+)\b/i, /\bTaille\s*(\d{2})\b/i];
-  for(const r of sizeRegs){ const m=r.exec(text); if(m && m[1]){ size=m[1]; break; } }
-
-  let brand=''; for(const b of BRAND_LIST){ const re=new RegExp(`\\b${b.replace(/\s+/g,'\\s+')}`,'i'); if(re.test(text)){ brand=b; break; } }
-  return { code, color, size, brand };
-}
-function extractGenericKeywords(textRaw='', max=4){
-  const text = String(textRaw||'').toLowerCase().replace(/[^\w가-힣\s]/g,' ');
-  const words = text.split(/\s+/).filter(Boolean);
-  const stop = new Set(['the','and','for','with','this','that','size','color','black','white','gray','grey','noir','blanc','bleu','rouge','vert','jaune','of','to','in','on','a','an','mm','cm','inch','인치','사이즈','색상','제품','모델','코드']);
-  const counts = new Map();
-  for(const w of words){ if (w.length<2 || stop.has(w)) continue; counts.set(w,(counts.get(w)||0)+1); }
-  return [...counts.entries()].sort((a,b)=>b[1]-a[1]).slice(0,max).map(([w])=>w).join(' ');
+  const picked=[...sec.slice(0,6), ...pri.slice(0,4)];
+  let q=picked.join(' ').replace(/\s{2,}/g,' ').trim();
+  if(q.length<6 && lines.length) q=lines[0].slice(0,80);
+  if(q.length>80) q=q.slice(0,80);
+  return q;
 }
 
-/* ===== 보고서 렌더러 ===== */
-function buildReport(payload){
-  const lines=[];
-  const domain = payload.domain ? `(${payload.domain})` : '';
-
-  const info = extractInfo(gatherAllText(payload));
-  lines.push(`🧾 제품 식별 ${domain}`.trim());
-  lines.push(` - 제품코드: ${info.code || '정보 부족'}`);
-  lines.push(` - 색상: ${info.color || '정보 부족'}`);
-  lines.push(` - 사이즈: ${info.size || '정보 부족'}`);
-  lines.push(` - 브랜드(추정): ${info.brand || '없음'}`);
-  lines.push('');
-
-  const core = (payload.coreSummary||'').trim();
-  if(core){
-    lines.push('■ 핵심 요약');
-    for(const l of core.split('\n').filter(Boolean)){
-      const t = l.replace(/^\-\s?/, '').trim();
-      lines.push(' - ' + t);
-    }
-    lines.push('');
-  }
-
-  const cats = Array.isArray(payload.categories)? payload.categories : [];
-  for(const c of cats){
-    const title = c.title || c.key || '세부정보';
-    const sum = String(c.summary||'').trim();
-    if(!sum) continue;
-    lines.push(`■ ${title}`);
-    for(const l of sum.split('\n').filter(Boolean)){
-      const t = l.replace(/^\-\s?/, '').trim();
-      lines.push(' - ' + t);
-    }
-    lines.push('');
-  }
-  return lines.join('\n');
+/* ✅ 최종 검색어 빌더: 요약만 사용 */
+function buildSearchKeyword(_productIgnored={}, fallback=''){
+  const fromSummary = buildSearchKeywordFromSummary(fallback || '');
+  return fromSummary || '';
 }
 
-/* ===== 파일 선택 처리(onPick) + 이중 트리거 가드 ===== */
-let _pickBusy=false, _lastPickKey='';
-async function onPick(file, from){
-  try{
-    if(!file) return;
-    const key = `${file.name}|${file.size}|${file.lastModified}`;
-    if(_pickBusy || key===_lastPickKey) return;
-    _pickBusy=true; _lastPickKey=key;
-
-    lastImageBlob = file;
-
-    // FileReader로 미리보기 (모바일 호환성↑)
-    const dataUrl = await new Promise((resolve, reject)=>{
-      const fr = new FileReader();
-      fr.onload = ()=>resolve(fr.result);
-      fr.onerror = ()=>reject(new Error('이미지 로드 실패'));
-      fr.readAsDataURL(file);
-    });
-    imgPrev.src = dataUrl;
-    imgPrev.classList.remove('hidden');
-
-    btnAnalyze.classList.remove('hidden');
-    btnCoupangFlow.classList.remove('hidden');
-
-    if(from==='cam') fileCam.value='';
-    if(from==='pick') filePick.value='';
-
-    ocrDoneForThisImage=false; lastOCR=null;
-  }catch(err){
-    alert((err && err.message) || '이미지를 불러오지 못했습니다.');
-  }finally{
-    setTimeout(()=>{ _pickBusy=false; }, 250);
-  }
+/* ===== 파일 선택 ===== */
+async function onPick(file){
+  if(!file) return;
+  if(loadCredits()<=0){ alert('잔여 건수가 없습니다. 광고 시청으로 충전해주세요.'); return; }
+  lastImageBlob=file; imgPrev.src=URL.createObjectURL(file); imgPrev.classList.remove('hidden');
+  btnAnalyze.classList.remove('hidden'); btnCoupangFlow.classList.remove('hidden');
+  ocrDoneForThisImage=false; lastOCR=null;
 }
-fileCam.addEventListener('change', e=>{ onPick(e.target.files?.[0], 'cam'); });
-filePick.addEventListener('change', e=>{ onPick(e.target.files?.[0], 'pick'); });
+fileCam.addEventListener('change',()=>onPick(fileCam.files?.[0]));
+filePick.addEventListener('change',()=>onPick(filePick.files?.[0]));
 
 /* ===== OCR (한 번만 차감) ===== */
-let _ocrPromise=null;
 async function ensureOCR(){
   if(!lastImageBlob) throw new Error('이미지를 선택하세요.');
   if(lastOCR) return lastOCR;
-  if(_ocrPromise) return _ocrPromise;
-
-  _ocrPromise = (async ()=>{
-    if(!ocrDoneForThisImage){
-      const cur=loadCredits();
-      if(cur<=0) throw new Error('잔여 건수가 없습니다.');
-      saveCredits(cur-1);
-      ocrDoneForThisImage=true;
-    }
+  if(!ocrDoneForThisImage){ const cur=loadCredits(); if(cur<=0) throw new Error('잔여 건수가 없습니다.'); saveCredits(cur-1); ocrDoneForThisImage=true; }
+  if(USE_MOCK){
+    await new Promise(r=>setTimeout(r,500));
+    lastOCR={ coreSummary:'- 예시: 면 100% 기본핏 폴로 반팔\n- 화이트/네이비 옵션\n- 여름 캐주얼 착용감' };
+    return lastOCR;
+  }else{
     const base64=await toBase64(lastImageBlob);
     const r=await fetch(`${API_BASE}/api/summarize`,{
       method:'POST',headers:{'Content-Type':'application/json'},
       body:JSON.stringify({imageBase64:base64,lang:'ko'})
     });
-    let data;
-    try{ data=await r.json(); }
-    catch{
-      const text=await r.text().catch(()=> '');
-      if(r.status===413 || /Entity Too Large/i.test(text)) throw new Error('이미지가 너무 큽니다. 해상도를 낮추거나 압축 후 다시 시도하세요.');
-      throw new Error(text?.slice(0,120) || '서버 응답을 읽지 못했습니다.');
-    }
-    if(!r.ok || !data?.success) throw new Error(data?.message||'요약 실패');
+    const data=await r.json();
+    if(!r.ok||!data.success) throw new Error(data.message||'요약 실패');
     lastOCR=data.payload;
     return lastOCR;
-  })().finally(()=>{ _ocrPromise=null; });
-  return _ocrPromise;
+  }
 }
 
-/* ===== ① 작은 글씨 요약 → 보고서 ===== */
+/* ===== ① 작은 글씨 요약 ===== */
 btnAnalyze.addEventListener('click', async ()=>{
-  await showLoading(true);
   try{
     const payload=await ensureOCR();
-    sumReadOnly.value=buildReport(payload);
+    const core = (payload.coreSummary||'').trim();
+    sumReadOnly.value= core || '(요약 없음)';
+
+    // ✅ 요약 화면의 "쿠팡최저가 가기"는 요약만으로 키워드 생성
+    const kw = buildSearchKeyword({}, core);
+    btnGoCoupangDirect.onclick=()=>{
+      if(!kw) return alert('검색어가 없습니다.');
+      const app=coupangAppUrl(kw), web=coupangWebUrl(kw);
+      location.href=app;
+      setTimeout(()=>window.open(web,'_blank','noopener,noreferrer'),400);
+    };
+
     stepUpload.classList.add('hidden');
     stepSummary.classList.remove('hidden');
     window.scrollTo({top:0,behavior:'smooth'});
-  }catch(e){
-    alert(e.message||'오류가 발생했습니다.');
-  }finally{
-    await showLoading(false);
-  }
+  }catch(e){ alert(e.message||'오류가 발생했습니다.'); }
 });
 btnBackSum.addEventListener('click', ()=>{
   stepSummary.classList.add('hidden');
   stepUpload.classList.remove('hidden');
 });
 
-/* ===== ② 쿠팡 플로우 ===== */
+/* ===== ② 쿠팡 플로우: 요약 한 칸 + 검색어 한 줄 ===== */
 btnCoupangFlow.addEventListener('click', async ()=>{
-  await showLoading(true);
   try{
     const payload=await ensureOCR();
-
     const baseSummary=(payload.coreSummary||'').trim();
-    const p=payload.product||{};
-    const infoLine=[p.brand,p.model,p.name,Array.isArray(p.attrs)?p.attrs.slice(0,3).join(', '):''].filter(Boolean).join(' · ');
-    sumBox.value=[baseSummary, infoLine?`\n\n[제품] ${infoLine}`:''].join('');
-    sumBox.readOnly=true; btnEditSum.textContent='✏️ 수정';
 
-    // 검색어: (브랜드?) + 코드 + 색상 → 없으면 일반 키워드 추출 (사이즈 제외)
-    let kw = buildSearchKeyword({ brand:p.brand, model:p.model, name:p.name, attrs:[] }, '').trim();
-    if(!kw){
-      const allText=gatherAllText(payload);
-      const info=extractInfo(allText);
-      const parts=[]; if(info.brand) parts.push(info.brand); if(info.code) parts.push(info.code); if(info.color) parts.push(info.color);
-      kw = parts.join(' ').replace(/\s+/g,' ').trim();
-      if(!kw) kw = extractGenericKeywords(allText,4);
-    }
-    kwFinal.value=kw;
+    // ✅ 제품식별 줄 제거: 자유 요약만 노출
+    $('sumBox').value=baseSummary;
+    $('sumBox').readOnly=true; btnEditSum.textContent='✏️ 수정';
+
+    // ✅ 검색어도 요약 기반
+    kwFinal.value=buildSearchKeyword({}, baseSummary);
 
     stepUpload.classList.add('hidden');
     stepCoupang.classList.remove('hidden');
     window.scrollTo({top:0,behavior:'smooth'});
-  }catch(e){
-    alert(e.message||'오류가 발생했습니다.');
-  }finally{
-    await showLoading(false);
-  }
+  }catch(e){ alert(e.message||'오류가 발생했습니다.'); }
 });
 
 let isEditingSummary=false;
